fix:cors && feat:verify_access-token
